k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odoo-app
  labels:
    name: odoo-app
